--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,5 @@
+$orange-color: rgba(252, 90, 44, 0.89);
+
 /* -- General Styles ------------------------ */
 html, body, #app {
   width: 100%;
@@ -17,7 +19,7 @@ html, body, #app {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgba(252, 90, 44, 0.89);
+  background: $orange-color;
   color: #fff;
   padding: 5px;
   .header-title {
@@ -62,12 +64,16 @@ html, body, #app {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width:100%;
+  color: #933;
+
+
+  li a:hover {
+    text-decoration-style: none;
+  }
 
   li {
     list-style: none;
-    background: #eee;
+    border: 1px solid $orange-color;
     padding: 10px;
     margin: 10px;
     h2 {
