--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -66,11 +66,6 @@ html, body, #app {
   align-items: center;
   color: #933;
 
-
-  li a:hover {
-    text-decoration-style: none;
-  }
-
   li {
     list-style: none;
     border: 1px solid $orange-color;
@@ -81,4 +76,24 @@ html, body, #app {
     }
   }
 
+}
+
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #933;
+  margin-top: 100px;
+  font-size: 200%;
+
+
+  ul {
+    list-style: none;
+    padding: 10px;
+    margin: 10px;
+    li {
+      text-align: center;
+    }
+  }
 }
