--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -77,7 +77,10 @@ html, body, #app {
   }
 
 }
-
+.loading-container {
+  text-align: center;
+  margin-top: 100px;
+}
 .detail-container {
   display: flex;
   flex-direction: column;
